prevent nav from jumping to two lines

--- a/main.css
+++ b/main.css
@@ -119,14 +119,14 @@ header a {
 
 @media only screen and (min-width: 768px) {
     #nav {
-        /* this ID allows the navigation bar colour to extend from edge to edge */
+        /* this <div> allows the navigation bar colour to extend from edge to edge */
         background-color: #333;
     }
 
     nav {
         background-color: #333;
-        width: 60%;
-        margin: auto;
+        width: 80%;
+        margin-left: 20%;
         border: 0;
         font-weight: 300;
 
